<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.payne.simpletestapp.MainActivity">


    <!-- Search Button -->
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        android:visible="true"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />


    <!-- Bound Request : requête des alertes dans le Bounding Box actuel -->
    <item
        android:id="@+id/highlight"
        android:title="@string/highlight"
        app:showAsAction="never" />

    <!-- Mise à jour : requête des alertes à l'intérieur des Zones Surveillées -->
    <item
        android:id="@+id/maj"
        android:title="@string/maj"
        app:showAsAction="never" />

    <!-- Ajouter le CurrentBoundingBox aux Zones Surveillées -->
    <item
        android:id="@+id/add"
        android:title="@string/add"
        app:showAsAction="never" />


    <!-- Filter buttons -->
    <item
        android:id="@+id/cB_fire"
        android:checkable="true"
        android:checked="true"
        android:title="@string/cB_fire"
        app:showAsAction="never" />
    <item
        android:id="@+id/cB_water"
        android:checkable="true"
        android:checked="true"
        android:title="@string/cB_water"
        app:showAsAction="never" />
    <item
        android:id="@+id/cB_terrain"
        android:checkable="true"
        android:checked="true"
        android:title="@string/cB_terrain"
        app:showAsAction="never" />
    <item
        android:id="@+id/cB_meteo"
        android:checkable="true"
        android:checked="true"
        android:title="@string/cB_meteo"
        app:showAsAction="never" />
    <item
        android:id="@+id/cB_zones"
        android:checkable="true"
        android:checked="false"
        android:title="@string/cB_zones"
        app:showAsAction="never" />
    <item
        android:id="@+id/cB_histo"
        android:checkable="true"
        android:checked="false"
        android:title="@string/cB_histo"
        app:showAsAction="never" />
    <item
        android:id="@+id/cB_users"
        android:checkable="true"
        android:checked="false"
        android:title="@string/cB_users"
        app:showAsAction="never" />

    <!-- User profile button -->
    <item
        android:id="@+id/profileBtn"
        android:icon="@drawable/test"
        android:title="@string/profileBtn"
        android:visible="true"
        app:showAsAction="always" />


    <!-- Icons: https://material.io/icons/ -->
    <!-- https://developer.android.com/guide/topics/resources/menu-resource -->

    <!-- "Mark Favorite", should appear as action button if possible -->

    <!-- DEPRECATED !!
    <item
        android:id="@+id/posBtn"
        android:orderInCategory="100"
        android:title="@string/posBtn"
        app:showAsAction="never" />
    <item
        android:id="@+id/removeAll"
        android:orderInCategory="103"
        android:title="@string/removeAll"
        app:showAsAction="never" />
    <item
        android:id="@+id/centerBtn"
        android:orderInCategory="101"
        android:title="@string/centerBtn"
        app:showAsAction="never" />
    <item
        android:id="@+id/addUserPin"
        android:orderInCategory="104"
        android:title="@string/addUserPin"
        app:showAsAction="never" />
    <item
        android:id="@+id/circleBtn"
        android:orderInCategory="105"
        android:title="@string/circleBtn"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="106"
        android:title="@string/action_settings"
        app:showAsAction="never" />
        -->

</menu>
